# parser_fuck

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: json.rs
src/: combinators.rs  common.rs  lib.rs  parser_fuck.rs  test_json.rs  utils.rs
src/combinators/: and.rs  and_then.rs  dyns.rs  iter.rs  many.rs  map.rs  may.rs  not.rs  one.rs  or.rs  or_else.rs  or_trans.rs  satisfy.rs  sub.rs
src/common/: cell.rs  char_span.rs  chars.rs  loc.rs  span.rs  time_travel.rs  timeline.rs
