[package]
name = "parser_fuck"
version = "0.0.0"
authors = ["Package <Aditrc@outlook.com>"]
edition = "2018"
description = "A simple parser combinator library"
readme = "README.md"
repository = "https://github.com/MeowType/parser_fuck"
license = "MIT"
keywords = ["parser-combinators", "parser", "combinator", "parsing", "parser"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
batch_oper = "1.2.0"
serde = "1.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }