[package]
authors = ["Package <Aditrc@outlook.com>"]
categories = ["parsing"]
description = "A simple parser combinator library"
edition = "2018"
keywords = ["parser-combinators", "parser", "combinator", "parsing", "parser"]
license = "MIT"
name = "parser_fuck"
readme = "README.md"
repository = "https://github.com/MeowType/parser_fuck"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsugar = "2.4"
serde = {version = "1", features = ["derive"]}
uuid = {version = "1.8", features = ["serde", "v4"]}

[dev-dependencies]
easybench = "1"
serde_json = "1"
